--- a/assets/src/scss/partials/_footer.scss
+++ b/assets/src/scss/partials/_footer.scss
@@ -32,6 +32,22 @@
       ul {
          list-style: none;
 
+         &.footer-icon-list {
+            li {
+               display: flex;
+               align-items: start;
+               gap: 4px;
+               @media only screen and (max-width: $max-md) {
+                  justify-content: center;
+               }
+            }
+
+            img {
+               width: 16px;
+               height: 16px;
+            }
+         }
+
          li {
             font-size: 15px;
             line-height: 1.3;
@@ -40,6 +56,7 @@
             &:not(:last-of-type) {
                margin-bottom: 5px;
             }
+
 
             a {
                display: block;
@@ -64,24 +81,30 @@
       }
 
    }
+
    &--logo {
       display: flex;
       align-items: center;
       gap: 20px;
       margin-right: auto;
+
       @media only screen and (max-width: $max-md) {
          margin-right: 0;
       }
+
       img {
          max-width: 32px;
       }
    }
-   &--txt{
+
+   &--txt {
       margin-right: auto;
+
       @media only screen and (max-width: $max-md) {
          margin-right: 0;
       }
    }
+
    &__copyright {
       letter-spacing: 1px;
       font-size: 10px;
