--- a/assets/src/scss/partials/_homepage.scss
+++ b/assets/src/scss/partials/_homepage.scss
@@ -105,32 +105,45 @@
       }
 
       label {
-         font-size: 18px;
-         padding-left: 30px;
+         font-size: 17px;
+         padding-left: 18px;
       }
 
       input,
       select {
          margin-left: 20px;
+
       }
 
       .arrow-down {
-         margin-right: 50px;
+         margin-left: 4px;
          flex-shrink: 0;
+         @media only screen and (max-width: $max-lg) {
+            margin-left: 4px;
+            margin-right: 20px;
+
+         }
       }
 
 
       input,
       select {
-         width: 100%;
+         width: fit-content;
+         width: -webkit-fit-content;
+         width: -moz-fit-content;
+         width: -ms-fit-content;
+         width: -o-fit-content;
          outline: none;
          border: none;
-         font-size: 18px;
+         font-size: 17px;
          line-height: 1;
          background-color: transparent;
          color: #c7c7c7;
          cursor: pointer;
+         @media only screen and (max-width: $max-lg) {
+            width: 100%;
 
+         }
          &[type="submit"] {
             font-size: 13px;
             padding: 0;
