--- a/assets/src/scss/core.scss
+++ b/assets/src/scss/core.scss
@@ -47,4 +47,5 @@
 @import "partials/single_crew";
 @import "partials/single";
 @import "partials/faq";
+@import "partials/archive";
 @import "partials/footer";
