--- a/assets/src/scss/partials/_single.scss
+++ b/assets/src/scss/partials/_single.scss
@@ -6,14 +6,14 @@
     padding: 80px 0;
 
     &__content {
-        max-width: 800px;
-        margin: 0 auto;
+
     }
 
     .post {
         &__header {
             margin-bottom: 30px;
             text-align: center;
+            background: transparent;
         }
 
         &__categories {
