--- a/assets/src/scss/partials/_single.scss
+++ b/assets/src/scss/partials/_single.scss
@@ -3,7 +3,7 @@
    ========================================================================== */
 
 .single-post {
-    padding: 80px 0;
+    padding: 80px 0 150px;
 
     &__content {
 
