--- a/assets/public/css/bundle.css
+++ b/assets/public/css/bundle.css
@@ -2545,7 +2545,7 @@ html {
         font-size: 20px; } }
 
 .page-template-page-gallery header,
-.page-template-default header, .page-template-page-faq header, .post-template-default header {
+.page-template-default header, .page-template-page-faq header, .post-template-default header, .page-template-page-post-archive header, .archive header {
   background-color: #0f1832; }
 
 .post-type-archive-destination {
@@ -3656,7 +3656,7 @@ button-widget {
    SCSS Styles [PARTIALS:Single Post]
    ========================================================================== */
 .single-post {
-  padding: 80px 0; }
+  padding: 80px 0 150px; }
   .single-post .post__header {
     margin-bottom: 30px;
     text-align: center;
@@ -4171,7 +4171,12 @@ button-widget {
         display: inline-block;
         background-color: rgba(255, 255, 255, 0.1);
         padding: 5px 12px;
-        border-radius: 20px; }
+        border-radius: 20px;
+        width: fit-content;
+        width: -webkit-fit-content;
+        width: -moz-fit-content;
+        width: -ms-fit-content;
+        width: -o-fit-content; }
       .archive-grid__featured-content .title {
         font-size: 32px;
         margin-bottom: 20px;
@@ -4332,6 +4337,8 @@ button-widget {
     .archive-grid__small-item-image-container {
       height: 180px;
       overflow: hidden; }
+      .archive-grid__small-item-image-container img {
+        width: 100%; }
     .archive-grid__small-item-image {
       width: 100%;
       height: 100%;
@@ -4396,7 +4403,7 @@ button-widget {
 
 .archive-header {
   text-align: center;
-  margin: 60px 0 40px; }
+  margin: 160px 0 40px; }
   .archive-header h1 {
     font-size: 54px;
     color: #0f1832;
@@ -4495,6 +4502,9 @@ button-widget {
 @keyframes spin {
   to {
     transform: rotate(360deg); } }
+.section-post-archive {
+  margin-bottom: 150px; }
+
 /* ==========================================================================
    SCSS Styles [PARTIALS:FOOTER]
    ========================================================================== */
