--- a/assets/src/scss/partials/_archive.scss
+++ b/assets/src/scss/partials/_archive.scss
@@ -59,6 +59,11 @@
                 background-color: rgba(255, 255, 255, 0.1);
                 padding: 5px 12px;
                 border-radius: 20px;
+                width: fit-content;
+                width: -webkit-fit-content;
+                width: -moz-fit-content;
+                width: -ms-fit-content;
+                width: -o-fit-content;
             }
 
             .title {
@@ -292,6 +297,9 @@
         &-image-container {
             height: 180px;
             overflow: hidden;
+            img{
+                width: 100%;
+            }
         }
         
         &-image {
@@ -380,7 +388,7 @@
 
 .archive-header {
     text-align: center;
-    margin: 60px 0 40px;
+    margin: 160px 0 40px;
     
     h1 {
         font-size: 54px;
@@ -518,3 +526,8 @@
         transform: rotate(360deg);
     }
 } 
+
+
+.section-post-archive{
+    margin-bottom: 150px;
+}
