--- a/assets/src/scss/partials/_archive.scss
+++ b/assets/src/scss/partials/_archive.scss
@@ -299,6 +299,7 @@
             overflow: hidden;
             img{
                 width: 100%;
+                transition: transform 0.5s ease;
             }
         }
         
