--- a/assets/src/scss/partials/_homepage.scss
+++ b/assets/src/scss/partials/_homepage.scss
@@ -48,6 +48,71 @@
    }
 }
 
+// Cruise Hero Extra
+.cruise-hero-extra {
+   display: flex;
+       flex-wrap: wrap;
+       justify-content: space-between;
+       width: 100%;
+       margin: 35px auto 20px;
+       margin-bottom: auto;
+       gap: 20px;
+   
+   @media only screen and (max-width: $max-md) {
+      flex-direction: column;
+      align-items: center;
+      margin: 25px auto 15px;
+   }
+   
+   &__item {
+      // flex: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      padding: 0 15px;
+      color: #fff;
+      
+      @media only screen and (max-width: $max-md) {
+         margin-bottom: 20px;
+         width: 100%;
+      }
+   }
+   
+   &__icon {
+      margin-bottom: 15px;
+      
+      img {
+         max-width: 80px;
+         height: auto;
+         
+         @media only screen and (max-width: $max-md) {
+            max-width: 60px;
+         }
+      }
+   }
+   
+   &__title {
+      font-size: 18px;
+      font-weight: bold;
+      margin-bottom: 5px;
+      text-transform: uppercase;
+      
+      @media only screen and (max-width: $max-md) {
+         font-size: 16px;
+      }
+   }
+   
+   &__message {
+      font-size: 16px;
+      line-height: 1.3;
+      
+      @media only screen and (max-width: $max-md) {
+         font-size: 14px;
+      }
+   }
+}
+
 .form {
    &-container {
       margin-top: auto;
@@ -317,7 +382,7 @@
 
       p {
          margin-top: 15px;
-         font-size: 16px;
+         font-size: 18px;
 
          @media only screen and (max-width: $max-md) {
             br {
@@ -326,7 +391,7 @@
          }
 
          span {
-            font-size: 14px;
+            font-size: 16px;
 
             @media only screen and (max-width: $max-md) {
                display: block;
@@ -438,6 +503,13 @@
             justify-content: center;
             margin: 0 auto;
             text-align: center;
+         }
+         &__content{
+            > span{
+               font-size: 18px;
+               margin-top: 4px;
+               display: block;
+            }
          }
 
       }
@@ -552,7 +624,7 @@
 
       span {
          display: block;
-         font-size: 13px;
+         font-size: 16px;
       }
 
       &:before {
@@ -574,7 +646,7 @@
 .see-more {
    display: block;
    text-align: center;
-   font-size: 13px;
+   font-size: 16px;
    text-decoration: underline;
    margin-top: 25px;
 }
@@ -612,10 +684,11 @@
 
    p {
       margin-top: 10px;
-      font-size: 16px;
+      font-size: 18px;
       line-height: 1.1;
       color: #0f1832;
-      letter-spacing: 1.6px;
+      letter-spacing: 1.1px;
+      text-align: left;
 
       @media only screen and (max-width: $max-md) {
          letter-spacing: 1.2px;
