--- a/assets/src/scss/partials/_main.scss
+++ b/assets/src/scss/partials/_main.scss
@@ -319,3 +319,24 @@ button-widget{
 		margin-bottom: 50px;
 	}
 }
+.section--archive{
+	margin: 150px 0;
+}
+
+.section--news{
+	margin: 50px 0 150px;
+	@media only screen and (max-width: $max-md) {
+		margin: 50px 0 50px;
+	}
+	h2{
+		font-size: 54px;
+		line-height: 1.1;
+		color: #0f1832;
+		margin-bottom: 25px;
+		text-align: center;
+		@media only screen and (max-width: $max-md) {
+			margin-bottom: 50px;
+			font-size: 32px;
+		}
+	}
+}
