--- a/assets/src/scss/partials/_homepage.scss
+++ b/assets/src/scss/partials/_homepage.scss
@@ -172,6 +172,7 @@
       label {
          font-size: 17px;
          padding-left: 18px;
+         font-weight: 600;
       }
 
       input,
@@ -203,7 +204,7 @@
          font-size: 17px;
          line-height: 1;
          background-color: transparent;
-         color: #c7c7c7;
+         color: #fff;
          cursor: pointer;
          @media only screen and (max-width: $max-lg) {
             width: 100%;
@@ -216,7 +217,9 @@
             color: #fff;
             background: none;
          }
-
+option{
+   color: #0f1832;
+}
       }
 
       button {
